# QCCAS

./: README.md  pyproject.toml
analysis/: measure_no_split.ipynb
examples/: basic_example.py
src/: linalg_util.py  list_util.py  measures.py  prob_util.py  quant_util.py  simulator.py
